# menkyo-api

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  makefile  pyproject.toml
app/: main.py  settings.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/resources/: collections.py
app/commands/: cli.py
app/commands/data/: collections.csv  questions.csv
app/models/: __init__.py  collection.py  question.py  question_collection.py
app/repository/: base.py  collection_repository.py
app/schemas/: collection.py
migrations/: env.py
migrations/versions/: 514b301c8bdf_create_question_collection_table.py  790095308492_create_questions_table.py  ba9ec99f7d0d_create_collections_table.py  e44910598b85_create_collections_table.py
